# arrow-utils

./: .gitignore  Cargo.toml  README.md
arrow-utils/: Cargo.toml
query-engines/df-play/: Cargo.toml  prompt.md
query-engines/df-play/notes/: logical-plan.md  note-points.md
query-engines/df-play/src/: basic.rs  filter_pushdown.rs  lib.rs  tree_node_.rs
query-engines/df-play/src/delta/: mod.rs
query-engines/naive-query-engine/src/physical_plan/: limit.rs
query-engines/simple-rust-query-engine/: Cargo.toml
query-engines/simple-rust-query-engine/src/expression/logical/: mod.rs
query-engines/simple-rust-query-engine/src/expression/physical/: mod.rs
query-engines/simple-rust-query-engine/src/sql/: expr.rs  select.rs  visitor.rs
