[workspace]
members = ["arrow-utils"]
resolver = "3"

[workspace.dependencies]

# Data related deps

## rdbms
bb8 = "0.9"
sqlparser = "0.58"
chrono = { version = "0.4.41", features = ["serde"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "chrono",
    "macros",
    "runtime-tokio",
    "tls-rustls"
]}
mysql = { version = "26.0.0", features = ["rustls"], default-features = false }
r2d2 = { version = "0.8.10", default-features = false }


## columnar
arrow = { version = "55.0.0", features = ["prettyprint"] }
arrow-arith = "=55.0.0"
arrow-array = { version = "55.0.0" }
arrow-schema = { version = "55.0.0" }
arrow-ipc = { version = "55.0.0" }
arrow-csv = { version = "55.0.0" }
parquet = { version = "55.0.0" }
object_store = { version = "0.12.3", features = ["aws", "azure", "gcp", "tls-webpki-roots"], default-features = false }
deltalake = { version = "0.27", features = [
    "datafusion",
    "datafusion-ext",
    "s3",
    "azure",
    "gcs",
    "rustls"
], default-features = false }
delta_kernel = { version = "0.13",  default-features = false }
datafusion = { version = "48.0.0", default-features = false }
datafusion-table-providers = { version = "0.6.3", features = ["mysql", "postgres"], default-features = false }
