[package]
name = "simple-rust-query-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
arrow = { version = "56.0", features = ["prettyprint"] }
arrow-schema = "56.0"
arrow-select = "56.0"
arrow-array = "56.0"
async-stream = "0.3.5"
futures = "0.3.30"
futures-util = "0.3.30"
itertools = "0.14"
snafu = "0.8.4"
tokio = { version = "1.47", features = ["full"] }
half = "2.4.1"
sqlparser = { version = "0.58", features = ["visitor"] }
